# deployd

./: .gitignore  Cargo.toml  Earthfile  README.md  flake.nix
src/: main.rs  server.rs
src/server/: desired_state.rs
