[package]
name = "deployd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"]}
futures = "0.3"

bollard = "0.16"

[dev-dependencies]
async-tempfile = "0.6"
test-log = {version = "0.2", features = [ "trace" ] }
